--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@zxing/browser": "^0.1.5",
+    "@zxing/library": "^0.21.3",
     "axios": "^1.10.0",
     "firebase": "^11.10.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-google-button": "^0.8.0",
+    "react-qr-barcode-scanner": "^2.1.8",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
     "react-speech-recognition": "^4.0.1",
+    "react-zxing": "^2.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,5 +49,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0"
   }
 }
